# maya-plugin-template

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report---.md  feature-request--.md
libraries/: .gitignore  README.md
src/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  plugin.cpp  plugin.h
